syntax = "proto3";

import "NativeApp.proto";

message PbContent {
    uint32 type = 1;
    string text = 2;
    string link = 3;
    string src = 4;
    string bsize = 5;
    string big_src = 6;
    string big_size = 7;
    string cdn_src = 8;
    string big_cdn_src = 9;
    string imgtype = 10;
    string c = 11;
    string voice_md5 = 12;
    uint32 during_time = 13;
    uint32 is_sub = 14;
    uint64 uid = 15;
    string dynamic = 16;
    string _static = 17;
    uint32 width = 18;
    uint32 height = 19;
    string packet_name = 20;
    string phonetype = 21;
    uint32 is_native_app = 22;
    NativeApp native_app = 23;
}
